[package]
name = "ohos-vsync"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/openharmony-rs/ohos-vsync"
description = "Bindings to the `native_vsync` library on OpenHarmony"
keywords = ["OpenHarmony", "HarmonyOS", "vsync"]
license = "Apache-2.0"
readme = "Readme.md"

[dependencies]
ohos-sys = { version = "0.4.0", features = ["vsync"]}
log = {version = "0.4", optional = true}

[features]
log = ["dep:log"]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-ohos"
